--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.4",
     "next": "12.1.5",
+    "postcss": "^8.4.12",
     "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react-dom": "18.0.0",
+    "react-protected-mailto": "^1.0.3",
+    "tailwindcss": "^3.0.24"
   },
   "devDependencies": {
     "eslint": "8.13.0",
