--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,7 @@ yarn-error.log*
 .env.development.local
 .env.test.local
 .env.production.local
+
+# cypress
+cypress/screenshots/
+cypress/videos/
