--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "serve": "next start",
     "analyze": "cross-env ANALYZE=true next build",
     "lint": "next lint --fix --dir pages --dir components --dir lib --dir layouts --dir scripts",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "cypress": "cypress run",
+    "test_integration": "start-server-and-test start http://localhost:3000 cypress"
   },
   "dependencies": {
     "@fontsource/inter": "4.5.2",
@@ -21,6 +23,7 @@
     "@tailwindcss/forms": "^0.4.0",
     "@tailwindcss/typography": "^0.5.0",
     "autoprefixer": "^10.4.0",
+    "cypress": "^9.5.4",
     "esbuild": "^0.13.13",
     "github-slugger": "^1.3.0",
     "gray-matter": "^4.0.2",
@@ -46,6 +49,7 @@
     "remark-math": "^5.1.1",
     "sharp": "^0.28.3",
     "smoothscroll-polyfill": "^0.4.4",
+    "start-server-and-test": "^1.14.0",
     "tailwindcss": "^3.0.23",
     "unist-util-visit": "^4.0.0"
   },
