--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "eslint": "^7.29.0",
     "eslint-config-next": "12.1.4",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-prettier": "^3.3.1",
     "file-loader": "^6.0.0",
     "globby": "11.0.3",
