--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "start": "cross-env SOCKET=true node ./scripts/next-remote-watch.js ./data",
+    "start-test": "next build && next start -p 3003",
     "dev": "next dev",
     "build": "next build && node ./scripts/generate-sitemap",
     "serve": "next start",
@@ -11,7 +12,7 @@
     "lint": "next lint --fix --dir pages --dir components --dir lib --dir layouts --dir scripts",
     "prepare": "husky install",
     "cypress": "cypress run",
-    "test_integration": "start-server-and-test start http://localhost:3000 cypress"
+    "test_e2e": "start-server-and-test start-test http://localhost:3003 cypress"
   },
   "dependencies": {
     "@fontsource/inter": "4.5.2",
