--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@tailwindcss/typography": "^0.5.0",
     "autoprefixer": "^10.4.0",
     "cypress": "^9.5.4",
+    "deline": "^1.0.4",
     "esbuild": "^0.13.13",
     "github-slugger": "^1.3.0",
     "gray-matter": "^4.0.2",
@@ -59,12 +60,13 @@
     "@next/bundle-analyzer": "12.1.4",
     "@svgr/webpack": "^6.1.2",
     "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.1.1",
+    "@testing-library/react": "^12.0.0",
     "dedent": "^0.7.0",
-    "eslint": "^7.29.0",
+    "eslint": "^8.14.0",
     "eslint-config-next": "12.1.4",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-cypress": "^2.12.1",
+    "eslint-plugin-jest": "^26.1.5",
     "eslint-plugin-prettier": "^3.3.1",
     "file-loader": "^6.0.0",
     "globby": "11.0.3",
