We need to specify correct port for the start action

--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -13,5 +13,5 @@ jobs:
       - name: Cypress run
         uses: cypress-io/github-action@v2
         with:
-          build: npm run build
-          start: npm start
+          build: npm run next build
+          start: npm run next start -p 3003
